--- a/docs/dissertation/refs.bib
+++ b/docs/dissertation/refs.bib
@@ -81,3 +81,43 @@
     year = "2013",
     howpublished = "http://steganosaur.us/about"
 }
+
+@inproceedings{xu2013video,
+    title={Video steganalysis based on the constraints of motion vectors},
+    author={Xu, Xikai and Dong, Jing and Wang, Wei and Tan, Tieniu},
+    booktitle={Image Processing (ICIP), 2013 20th IEEE International Conference on},
+    pages={4422--4426},
+    year={2013},
+    organization={IEEE}
+}
+
+@article{deng2012digital,
+    title={Digital video steganalysis using motion vector recovery-based features},
+    author={Deng, Yu and Wu, Yunjie and Zhou, Linna},
+    journal={Applied optics},
+    volume={51},
+    number={20},
+    pages={4667--4677},
+    year={2012},
+    publisher={Optical Society of America}
+}
+
+@article{cao2012video,
+    title={Video steganalysis exploiting motion vector reversion-based features},
+    author={Cao, Yun and Zhao, Xianfeng and Feng, Dengguo},
+    journal={Signal Processing Letters, IEEE},
+    volume={19},
+    number={1},
+    pages={35--38},
+    year={2012},
+    publisher={IEEE}
+}
+
+@inproceedings{craver1998public,
+    title={On public-key steganography in the presence of an active warden},
+    author={Craver, Scott},
+    booktitle={Information Hiding},
+    pages={355--368},
+    year={1998},
+    organization={Springer}
+}
